--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -56,9 +56,9 @@
                     <div class="card bg-dark" style='border-top-color:white'>
                         <div class="card-body ">
                             <form action="#">
-                                <textarea name="subject" placeholder="Write feedback here." style="height:4em; width:15em;"></textarea>   
+                                <textarea name="subject" placeholder="Temporarily Disabled" style="height:4em; width:15em;"></textarea>   
                                 <div class="text-center">
-                                    <button class="btn btn-primary mb-0">Submit</button>
+                                    <button class="btn btn-primary mb-0 disabled">Submit</button>
                                 </div> 
                             </form>
                         </div>
